# kyokyo

./: RESCON2026.sln  setting.json
RESCON2026/: RESCON2026.vcxproj  RESCON2026.vcxproj.filters
RESCON2026/include/: AudioConfig.hpp  ButtonsDrawer.hpp  Controller.hpp  ControllerModelDrawer.hpp  ControllerSender.hpp  DeviceConfig.h  Fft.hpp  IRobot.hpp  PiRobot.hpp  Pulldown.hpp  SSHMonitoring.hpp  SoundAnalyzer.hpp  SoundReceiver.hpp  UDP.hpp  menu.hpp  stdafx.h
RESCON2026/src/: Main.cpp
program/: controller.cpp  joystickcondition.cpp
program/opencv/: makeimg.py
program/opencv/janken/: CMakeLists.txt  function1.hpp  janken.cpp  jankenraspi.cpp
